--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,21 +1,26 @@
 .button {
   display: inline-block;
+
   margin: 5px 15px;
   padding: 2px;
   cursor: pointer;
 
-  border-radius: 2px;
-  border: 1px solid;
   font-size: 14px;
   font-family: inherit;
   background-color: #ffffff;
+  color: #66cc66;
 }
 
 .button:hover,
 .button:focus {
-  background-color: #199ed2;
+  background-color: #336633;
 }
 
 .listItem {
-  align-items: center;
+  border: 1px solid #336633;
+  border-radius: 5px;
+  max-width: 50%;
+  margin-bottom: 5px;
+
+  background-color: #669966;
 }
