--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,13 +1,33 @@
-input {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 10px 0;
-  box-sizing: border-box;
+form {
+  max-width: 350px;
+  margin: 10px;
+  padding: 20px;
+  background: #669966;
+  font-family: 'Oswald', sans-serif;
 }
 
-form {
-  outline: 2px solid red;
-  padding: 5px 10px;
+.formGroup {
+  margin-bottom: 20px;
+  padding: 10px;
+  background: #003300;
+}
+
+.formGroup input,
+.form-group label {
+  display: block;
+  width: 100%;
+}
+
+.formGroup input {
+  padding: 5px;
+  line-height: 10px;
+}
+
+.formGroup label {
+  margin-bottom: 5px;
+  color: #000000;
+  text-transform: uppercase;
+  font-size: 12px;
 }
 
 .button {
@@ -15,14 +35,14 @@ form {
   margin: 10px 4px;
   padding: 5px;
   cursor: pointer;
+  color: #66cc66;
+  background-color: #ffffff;
 
-  border-radius: 10px;
   font-size: 14px;
   font-family: inherit;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 
 .button:hover,
 .button:focus {
-  background-color: #1976d2;
+  background-color: #336633;
 }
