--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,5 +1,5 @@
 form {
-  max-width: 350px;
+  min-width: 350px;
   margin: 10px;
   padding: 20px;
   background: #669966;
@@ -35,7 +35,7 @@ form {
   margin: 10px 4px;
   padding: 5px;
   cursor: pointer;
-  color: #66cc66;
+  color: #000000;
   background-color: #ffffff;
 
   font-size: 14px;
