--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -19,7 +19,7 @@
 .listItem {
   border: 1px solid #336633;
   border-radius: 5px;
-  max-width: 50%;
+  max-width: 350px;
   margin-bottom: 5px;
 
   background-color: #669966;
